kubernetes/apps/media/sonarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.pxldi.de`)
      kind: Rule
      middlewares:
        - name: internal-only
          namespace: traefik
        - name: authentik-forward-auth
          namespace: traefik
      services:
        - name: sonarr
          port: 8989
